results/compilation_out.txt
maze.c: In function ‘search_maze’:
maze.c:557:15: error: unused variable ‘rPathDirOrder’ [-Werror=unused-variable]
  557 |     Direction rPathDirOrder[] = {0, };
      |               ^~~~~~~~~~~~~
maze.c:553:45: error: unused parameter ‘leftRight’ [-Werror=unused-parameter]
  553 | int search_maze(Map *map, int r, int c, int leftRight)
      |                                         ~~~~^~~~~~~~~
maze.c:561:1: error: control reaches end of non-void function [-Werror=return-type]
  561 | }
      | ^
cc1: all warnings being treated as errors
